docs(README.md): add basic readme